# postcode-extractor-rs

./: Cargo.toml
src/: country.rs
