
[package]
name = "postcode_extractor"
version = "0.1.20"
edition = "2024"
license = "MIT"
description = "A simple tool to extract and identify postcodes"
authors = [
	"Indigo Curnick <indigo.c@naurt.com>",
	"Andrew Bowell <andrew.b@naurt.com>",
]
repository = "https://github.com/Naurt-Ltd-Public/postcode-extractor-rs"
readme = "README.md"
categories = ["text-processing"]
keywords = ["address", "postcode"]

[dependencies]
regex = "1.12.3"
serde_json = "1.0.149"
serde = { version = "1.0.139", features = ["derive"] }
include_dir = "0.7.4"
once_cell = "1.21.3"

[dev-dependencies]
walkdir = "2.5.0"
